Some new patterns and a temp table for leadership.

--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -3020,6 +3020,21 @@ Main content...
 .lt-ie9 .content_title__medium b {
   font-weight: normal !important;
 }
+@media only all and (max-width: 37.4375em) {
+  .content_title__medium {
+    margin-top: 0;
+    margin-bottom: 0.27777778em;
+    font-size: 1.125em;
+    font-family: &quot;AvenirNextLTW01-Medium&quot;, Arial, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.22222222;
+    margin-bottom: 1.16666667em;
+  }
+  .lt-ie9 .content_title__medium {
+    font-weight: normal !important;
+  }
+}
 .content_title__extra-small {
   font-family: &quot;AvenirNextLTW01-Demi&quot;, Arial, sans-serif;
   font-style: normal;
