--- a/static/css/cf-enhancements.less
+++ b/static/css/cf-enhancements.less
@@ -9,61 +9,61 @@
   patterns:
     - name: Percent-based
       markup: |
-        <div class="u-100"
+        <div class="u-w100pct"
              style="background: #DBEDD4; margin-bottom: 1px;">
-            <code>.u-100</code>
+            <code>.u-w100pct</code>
         </div>
-        <div class="u-90"
+        <div class="u-w90pct"
              style="background: #DBEDD4; margin-bottom: 1px;">
-            <code>.u-90</code>
+            <code>.u-w90pct</code>
         </div>
-        <div class="u-80"
+        <div class="u-w80pct"
              style="background: #DBEDD4; margin-bottom: 1px;">
-            <code>.u-80</code>
+            <code>.u-w80pct</code>
         </div>
-        <div class="u-70"
+        <div class="u-w70pct"
              style="background: #DBEDD4; margin-bottom: 1px;">
-            <code>.u-70</code>
+            <code>.u-w70pct</code>
         </div>
-        <div class="u-60"
+        <div class="u-w60pct"
              style="background: #DBEDD4; margin-bottom: 1px;">
-            <code>.u-60</code>
+            <code>.u-w60pct</code>
         </div>
-        <div class="u-50"
+        <div class="u-w50pct"
              style="background: #DBEDD4; margin-bottom: 1px;">
-            <code>.u-50</code>
+            <code>.u-w50pct</code>
         </div>
-        <div class="u-40"
+        <div class="u-w40pct"
              style="background: #DBEDD4; margin-bottom: 1px;">
-            <code>.u-40</code>
+            <code>.u-w40pct</code>
         </div>
-        <div class="u-30"
+        <div class="u-w30pct"
              style="background: #DBEDD4; margin-bottom: 1px;">
-            <code>.u-30</code>
+            <code>.u-w30pct</code>
         </div>
-        <div class="u-20"
+        <div class="u-w20pct"
              style="background: #DBEDD4; margin-bottom: 1px;">
-            <code>.u-20</code>
+            <code>.u-w20pct</code>
         </div>
-        <div class="u-10"
+        <div class="u-w10pct"
              style="background: #DBEDD4; margin-bottom: 1px;">
-            <code>.u-10</code>
+            <code>.u-w10pct</code>
         </div>
-        <div class="u-75"
+        <div class="u-w75pct"
              style="background: #DBEDD4; margin-bottom: 1px;">
-            <code>.u-75</code>
+            <code>.u-w75pct</code>
         </div>
-        <div class="u-25"
+        <div class="u-w25pct"
              style="background: #DBEDD4; margin-bottom: 1px;">
-            <code>.u-25</code>
+            <code>.u-w25pct</code>
         </div>
-        <div class="u-66"
+        <div class="u-w66pct"
              style="background: #DBEDD4; margin-bottom: 1px;">
-            <code>.u-66</code>
+            <code>.u-w66pct</code>
         </div>
-        <div class="u-33"
+        <div class="u-w33pct"
              style="background: #DBEDD4; margin-bottom: 1px;">
-            <code>.u-33</code>
+            <code>.u-w33pct</code>
         </div>
       notes:
         - "Inline styles are for demonstration purposes only, please don't use
@@ -72,60 +72,60 @@
     - cfgov-cf-enhancements
 */
 
-.u {
-    &-100 {
+.u-w {
+    &100pct {
         width: 100%;
     }
 
-    &-90 {
+    &90pct {
         width: 90%;
     }
 
-    &-80 {
+    &80pct {
         width: 80%;
     }
 
-    &-70 {
+    &70pct {
         width: 70%;
     }
 
-    &-60 {
+    &60pct {
         width: 60%;
     }
 
-    &-50 {
+    &50pct {
         width: 50%;
     }
 
-    &-40 {
+    &40pct {
         width: 40%;
     }
 
-    &-30 {
+    &30pct {
         width: 30%;
     }
 
-    &-20 {
+    &20pct {
         width: 20%;
     }
 
-    &-10 {
+    &10pct {
         width: 10%;
     }
 
-    &-75 {
+    &75pct {
         width: 75%;
     }
 
-    &-25 {
+    &25pct {
         width: 25%;
     }
 
-    &-66 {
+    &66pct {
         width: unit((2 / 3) * 100, %);
     }
 
-    &-33 {
+    &33pct {
         width: unit((1 / 3) * 100, %);
     }
 }
