--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6192,60 +6192,46 @@ img {
   patterns:
     - name: Percent-based
       markup: |
-        <div class="u-w100pct"
-             style="background: #DBEDD4; margin-bottom: 1px;">
+        <div class="u-w100pct" style="background: #DBEDD4; margin-bottom: 1px;">
             <code>.u-w100pct</code>
         </div>
-        <div class="u-w90pct"
-             style="background: #DBEDD4; margin-bottom: 1px;">
+        <div class="u-w90pct" style="background: #DBEDD4; margin-bottom: 1px;">
             <code>.u-w90pct</code>
         </div>
-        <div class="u-w80pct"
-             style="background: #DBEDD4; margin-bottom: 1px;">
+        <div class="u-w80pct" style="background: #DBEDD4; margin-bottom: 1px;">
             <code>.u-w80pct</code>
         </div>
-        <div class="u-w70pct"
-             style="background: #DBEDD4; margin-bottom: 1px;">
+        <div class="u-w70pct" style="background: #DBEDD4; margin-bottom: 1px;">
             <code>.u-w70pct</code>
         </div>
-        <div class="u-w60pct"
-             style="background: #DBEDD4; margin-bottom: 1px;">
+        <div class="u-w60pct" style="background: #DBEDD4; margin-bottom: 1px;">
             <code>.u-w60pct</code>
         </div>
-        <div class="u-w50pct"
-             style="background: #DBEDD4; margin-bottom: 1px;">
+        <div class="u-w50pct" style="background: #DBEDD4; margin-bottom: 1px;">
             <code>.u-w50pct</code>
         </div>
-        <div class="u-w40pct"
-             style="background: #DBEDD4; margin-bottom: 1px;">
+        <div class="u-w40pct" style="background: #DBEDD4; margin-bottom: 1px;">
             <code>.u-w40pct</code>
         </div>
-        <div class="u-w30pct"
-             style="background: #DBEDD4; margin-bottom: 1px;">
+        <div class="u-w30pct" style="background: #DBEDD4; margin-bottom: 1px;">
             <code>.u-w30pct</code>
         </div>
-        <div class="u-w20pct"
-             style="background: #DBEDD4; margin-bottom: 1px;">
+        <div class="u-w20pct" style="background: #DBEDD4; margin-bottom: 1px;">
             <code>.u-w20pct</code>
         </div>
-        <div class="u-w10pct"
-             style="background: #DBEDD4; margin-bottom: 1px;">
+        <div class="u-w10pct" style="background: #DBEDD4; margin-bottom: 1px;">
             <code>.u-w10pct</code>
         </div>
-        <div class="u-w75pct"
-             style="background: #DBEDD4; margin-bottom: 1px;">
+        <div class="u-w75pct" style="background: #DBEDD4; margin-bottom: 1px;">
             <code>.u-w75pct</code>
         </div>
-        <div class="u-w25pct"
-             style="background: #DBEDD4; margin-bottom: 1px;">
+        <div class="u-w25pct" style="background: #DBEDD4; margin-bottom: 1px;">
             <code>.u-w25pct</code>
         </div>
-        <div class="u-w66pct"
-             style="background: #DBEDD4; margin-bottom: 1px;">
+        <div class="u-w66pct" style="background: #DBEDD4; margin-bottom: 1px;">
             <code>.u-w66pct</code>
         </div>
-        <div class="u-w33pct"
-             style="background: #DBEDD4; margin-bottom: 1px;">
+        <div class="u-w33pct" style="background: #DBEDD4; margin-bottom: 1px;">
             <code>.u-w33pct</code>
         </div>
       notes:
@@ -6302,61 +6288,39 @@ img {
   notes:
     - "Updated table styling that needs to get ported to cf-core pending Design
        Manual approval."
+    - "At screens smaller than 960px wide the table cells stack."
   patterns:
     - name: Default table
       markup: |
         <table>
             <thead>
                 <tr>
-                    <th>
-                        Column 1
-                    </th>
-                    <th>
-                        Column 2
-                    </th>
+                    <th>Column 1</th>
+                    <th>Column 2</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>
-                        Lorem ipsum dolor.
-                    </td>
-                    <td>
-                        Lorem ipsum dolor.
-                    </td>
+                    <td>Lorem ipsum dolor.</td>
+                    <td>Lorem ipsum dolor.</td>
                 </tr>
                 <tr>
-                    <td>
-                        Lorem ipsum dolor.
-                    </td>
-                    <td>
-                        Lorem ipsum dolor.
-                    </td>
+                    <td>Lorem ipsum dolor.</td>
+                    <td>Lorem ipsum dolor.</td>
                 </tr>
                 <tr>
-                    <td>
-                        Lorem ipsum dolor.
-                    </td>
-                    <td>
-                        Lorem ipsum dolor.
-                    </td>
+                    <td>Lorem ipsum dolor.</td>
+                    <td>Lorem ipsum dolor.</td>
                 </tr>
                 <tr>
-                    <td>
-                        Lorem ipsum dolor.
-                    </td>
-                    <td>
-                        Lorem ipsum dolor.
-                    </td>
+                    <td>Lorem ipsum dolor.</td>
+                    <td>Lorem ipsum dolor.</td>
                 </tr>
             </tbody>
         </table>
   tags:
     - cfgov-cf-enhancements
 */
-tr {
-  border-bottom: 1px solid #babbbd;
-}
 th,
 td {
   padding: 0.625em 0.625em;
@@ -6365,14 +6329,6 @@ td {
 tbody > tr:nth-child(odd) > th,
 tbody > tr:nth-child(odd) > td {
   background: inherit;
-}
-tbody th {
-  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-}
-.lt-ie9 tbody th {
-  font-weight: normal !important;
 }
 thead th {
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
@@ -6392,6 +6348,33 @@ thead th {
 }
 .lt-ie9 thead th {
   font-weight: normal !important;
+}
+tbody th {
+  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+}
+.lt-ie9 tbody th {
+  font-weight: normal !important;
+}
+tbody tr {
+  border-bottom: 1px solid #babbbd;
+}
+@media only all and (max-width: 59.9375em) {
+  table {
+    width: 100%;
+  }
+  thead th {
+    display: block;
+  }
+  tbody th,
+  tbody td {
+    display: block;
+  }
+  tbody th + th,
+  tbody td + td {
+    padding-top: 0;
+  }
 }
 /* topdoc
   name: Simple base style modifiers
